--- a/views/Menu.html
+++ b/views/Menu.html
@@ -74,7 +74,7 @@ $(document).ready(function(){
 								</ul>
 							</li>
 							<li><a href=""><span class="glyphicon glyphicon-tint"></span>CSR</a></li>
-							<li><a href=""><span class="glyphicon glyphicon-earphone"></span>Contact</a></li>
+							<li><a href="#contact"><span class="glyphicon glyphicon-earphone"></span>Contact</a></li>
 							<li><a href=""><span class="glyphicon glyphicon-heart"></span>Donate</a></li>
 							<div class=""> </div>
 						</ul>
