--- a/views/footer.html
+++ b/views/footer.html
@@ -2,8 +2,8 @@
 	<div class="footer">
 		<div class="container">
 			<div class="footer-top">
-				<a href="#Home"><h3>Humanity</h3></a>
-				<p>© 2016 Humanity. All Rights Reserved | Design by  <a href="http://w3layouts.com/" target="_blank">W3layouts</a> </p>
+				<a href="#Home"><h3>Masss</h3></a>
+				<p>© 2019 Masss. All Rights Reserved | Design by Masss</p>
 				
 			</div>
 		</div>
